@@ -18,5 +18,7 @@ Changes from 2.1.1 to 2.1.2
 - Segfault fix in (EMPTY)Geometry::getCentroid()
 - Made polygon::getBoundary() always OGC-valid (no LinearRings)
 - Input checking and promoting in GeometryFactory::createMultiLineString()
+- Segfault fix in GeometryEditor::editPolygon() 
 
-@@@ from Changelog 2004-12-30 @@@
+
+@@@ from Changelog 2004-12-22 @@@
